--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,39 @@
-$color-white: #fff;
-$color-black: #111;
+// Unit (use to spaces like paddings, margins, top-right-bottom-left, etc)
+$unit-0000: 0px;
+$unit-0025: 1px;
+$unit-0050: 2px;
+$unit-0100: 4px;
+$unit-0200: 8px;
+$unit-0300: 12px;
+$unit-0400: 16px;
+$unit-0500: 20px;
+$unit-0600: 24px;
+$unit-0700: 28px;
+$unit-0800: 32px;
+$unit-0900: 36px;
+$unit-1000: 40px;
+$unit-1100: 44px;
+$unit-1200: 48px;
+$unit-1300: 52px;
+$unit-1400: 56px;
+$unit-1500: 60px;
+$unit-1600: 64px;
+$unit-1700: 68px;
+$unit-1800: 72px;
+$unit-1900: 76px;
+$unit-2000: 80px;
+$unit-2100: 84px;
+$unit-2200: 88px;
+$unit-2300: 92px;
+$unit-2400: 96px;
+$unit-2500: 100px;
+$unit-2600: 104px;
+$unit-2700: 108px;
+$unit-2800: 112px;
+$unit-2900: 116px;
+$unit-3000: 120px;
+
+// Breakpoints
+$breakpoint-sm: 768px;
+$breakpoint-md: 992px;
+$breakpoint-lg: 1280px;
